Needs more testing, but moved make install directory in  debian/rules from debian/tmp to debian/iguanair as that seems to be necessary when adding the debian/compat file which will soon be required. Not sure why -- leaving out the compat file is supposed to default to latest, but compat=9 is not the same as no compat even though 9 is latest compat. Anyway, set to compat=5 and this seems to work with new install directory. Also removed etc/default/iguanaIR from conffiles as that caused it to be double listed with new compat stuff.

--- a/software/usb_ir/packaging/debian/rules
+++ b/software/usb_ir/packaging/debian/rules
@@ -34,7 +34,7 @@ clean:
 	dh_clean
 
 	# remove the build directories
-	rm -rf $(CURDIR)/debian/tmp $(CURDIR)/debian/iguana-python
+	rm -rf $(CURDIR)/debian/iguanair $(CURDIR)/debian/iguana-python
 
 install: build
 	dh_testdir
@@ -44,7 +44,7 @@ install: build
 	dh_makeshlibs
 
 	# main install
-	make install DESTDIR=$(CURDIR)/debian/tmp
+	make install DESTDIR=$(CURDIR)/debian/iguanair
 
 	#add symlink for library
 	#ln -s libiguanaIR.so libiguanaIR.so.0
@@ -52,13 +52,13 @@ install: build
 
 	# move the python stuff into it's sub package
 	mkdir -p $(CURDIR)/debian/iguanair-python/usr/lib
-	mv $(CURDIR)/debian/tmp/usr/lib/python* $(CURDIR)/debian/iguanair-python/usr/lib
+	mv $(CURDIR)/debian/iguanair/usr/lib/python* $(CURDIR)/debian/iguanair-python/usr/lib
 
 	#move the reflasher stuff into it's sub systm
 	mkdir -p $(CURDIR)/debian/iguanair-reflasher/usr/bin
 	mkdir -p $(CURDIR)/debian/iguanair-reflasher/usr/lib
-	mv $(CURDIR)/debian/tmp/usr/lib/iguanaIR-reflasher $(CURDIR)/debian/iguanair-reflasher/usr/lib/
-	mv $(CURDIR)/debian/tmp/usr/bin/iguanaIR-reflasher $(CURDIR)/debian/iguanair-reflasher/usr/bin/
+	mv $(CURDIR)/debian/iguanair/usr/lib/iguanaIR-reflasher $(CURDIR)/debian/iguanair-reflasher/usr/lib/
+	mv $(CURDIR)/debian/iguanair/usr/bin/iguanaIR-reflasher $(CURDIR)/debian/iguanair-reflasher/usr/bin/
 	dh_pysupport 
 
 
