--- a/software/usb_ir/drivers/Makefile.in
+++ b/software/usb_ir/drivers/Makefile.in
@@ -10,11 +10,11 @@ endif
 all: $(DRIVERS)
 
 libusb.so: libusb.c $(LISTS) Makefile
-	$(CC) $(CPPFLAGS) $(CFLAGS) $(SHAREARG) $(LDFLAGS) $< \
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(PICFLAG) $(SHAREARG) $(LDFLAGS) $< \
 		$(LISTS) -o $@ -lusb-1.0
 
 libusbpre1.so: libusbpre1.c $(LISTS) Makefile
-	$(CC) $(CPPFLAGS) $(CFLAGS) $(SHAREARG) $(LDFLAGS) $< \
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(PICFLAG) $(SHAREARG) $(LDFLAGS) $< \
 		$(LISTS) -o $@ -lusb
 
 .PHONY: clean
