--- a/software/usb_ir/Make.settings.in
+++ b/software/usb_ir/Make.settings.in
@@ -14,7 +14,7 @@ builddir = $(shell pwd)
 
 CC = @CC@
 CPPFLAGS = @CPPFLAGS@
-CFLAGS = @CFLAGS@ -fpic
+CFLAGS = @CFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 INSTALL = @INSTALL@
@@ -22,6 +22,7 @@ INSTALL = @INSTALL@
 SHAREEXT = so
 LIBNAME=libiguanaIR.$(SHAREEXT).0
 SHAREARG = -shared
+PICFLAG = -fPIC
 ifeq ($(shell uname -m),x86_64)
   LIBDIR  = lib64
 else
@@ -32,7 +33,6 @@ else
     PATH = $(shell getconf PATH):/usr/local/bin:/opt/local/bin:/sw/bin
     export PATH
     LIBDIR  = lib
-    CFLAGS += -fPIC
     CPPFLAGS += -I/usr/local/include -I/usr/include -I/opt/local/include -I/sw/include
     LDFLAGS += -L/usr/local/lib -L/usr/lib -L/opt/local/lib -L/sw/lib -framework CoreFoundation -framework IOKit
     # Python needs .so but library should be .dylib
