configure now only uses libusb.so driver, not libusbpre1.so Debian packaging / build requirements now reflect this. Because we only use one library for usb support, debian binary dependencies automatically built on compile instead of hardcoded.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -112,8 +112,9 @@ install: all
 	install igdaemon $(DESTDIR)/$(BINDIR)/igdaemon
 	install -d $(DESTDIR)/$(LIBDIR)/iguanaIR
 	install $(LIBNAME) $(DESTDIR)/$(LIBDIR)/$(LIBNAME)
-	install drivers/libusbpre1.$(SHAREEXT) $(DESTDIR)/$(LIBDIR)/iguanaIR/libusbpre1.$(SHAREEXT)
-	install drivers/libusb.$(SHAREEXT) $(DESTDIR)/$(LIBDIR)/iguanaIR/libusb.$(SHAREEXT)
+	#install drivers/libusbpre1.$(SHAREEXT) $(DESTDIR)/$(LIBDIR)/iguanaIR/libusbpre1.$(SHAREEXT)
+	#install drivers/libusb.$(SHAREEXT) $(DESTDIR)/$(LIBDIR)/iguanaIR/libusb.$(SHAREEXT)
+	install drivers/*.$(SHAREEXT) $(DESTDIR)/$(LIBDIR)/iguanaIR/
 	install -d $(DESTDIR)$(prefix)/include
 	install $(srcdir)/iguanaIR.h $(DESTDIR)$(prefix)/include/iguanaIR.h
 ifdef DARWIN
