--- a/software/usb_ir/drivers/Makefile.in
+++ b/software/usb_ir/drivers/Makefile.in
@@ -1,6 +1,7 @@
 include ../Make.settings
 
-DRIVERS=libusbpre1.so libusb.so
+#DRIVERS=libusbpre1.so libusb.so
+DRIVERS=libusb.so
 LISTS=../list.o
 
 ifdef DARWIN
