Changed makefile so you can pass variable to have it not set permission on files to iguanair because when building package, build machine may not have user installed. Install, user postinstall scripts to change ownership of files. Fedora / Debian now calls make install with this option when making a package.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -81,7 +81,7 @@ _iguanaIR.$(SHAREEXT): iguanaIR_wrap.o
 endif
 
 # change ownership unless we're building an rpm
-ifeq ($(RPM_OS)$(DARWIN),)
+ifneq ($(INSTALLPACKAGE),TRUE)
   SETOWNER=--owner iguanair --group iguanair
 install: adduser
 .PHONY: adduser
