only add user / delete user on install / uninstall when not building for package. Do not hard-code uid when creating user, but flag it as system account to useradd function.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -86,7 +86,7 @@ ifneq ($(INSTALLPACKAGE),TRUE)
 install: adduser
 .PHONY: adduser
 adduser:
-	/usr/sbin/useradd -u 213 -c "Iguanaworks IR Daemon" -d / -s /sbin/nologin iguanair 2>/dev/null || true
+	/usr/sbin/useradd -r -M -c "Iguanaworks IR Daemon" -d / -s /bin/false iguanair 2>/dev/null || true
 
 uninstall: deluser
 .PHONY: deluser
