--- a/software/usb_ir/packaging/debian/control
+++ b/software/usb_ir/packaging/debian/control
@@ -2,7 +2,7 @@ Source: iguanair
 Section: utils
 Priority: optional
 Maintainer: IguanaWorks [support@iguanaworks.net]
-Build-Depends: debhelper (>=5), libpopt-dev (>=1.10), libusb-1.0-0-dev, python-dev (>=2.4), autoconf, automake, swig, fakeroot
+Build-Depends: debhelper (>=5), libpopt-dev (>=1.10), libusb-1.0-0-dev, python-dev (>=2.4), autoconf, automake, swig, fakeroot, python-support (>=0.5.3)
 Standards-Version: 3.7.2.2
 
 Package: iguanair
