--- a/software/usb_ir/win32/argp-standalone-1.3/argp.vcproj
+++ b/software/usb_ir/win32/argp-standalone-1.3/argp.vcproj
@@ -2,11 +2,11 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="igclient"
-	ProjectGUID="{35CB37C4-0658-4496-9BB8-95FD00DF6002}"
-	RootNamespace="igclient"
+	Name="argp"
+	ProjectGUID="{C1EA9C74-C62A-4143-91C8-B8F2B7E0A9A8}"
+	RootNamespace="argp"
 	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
+	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
 		<Platform
@@ -18,11 +18,10 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
-			IntermediateDirectory="Debug"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			OutputDirectory="$(SolutionDir)/$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			CharacterSet="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -42,15 +41,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;..;argp-standalone-1.3"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;SUPPORT_INCLUDE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;ARGP_EXPORTS;HAVE_MALLOC_H"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
-				WarningLevel="4"
-				Detect64BitPortabilityProblems="false"
-				DebugInformationFormat="3"
+				WarningLevel="3"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -63,15 +60,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib argp.lib"
-				OutputFile="$(OutDir)/igclient.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="argp-standalone-1.3"
+				ModuleDefinitionFile="argp.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/igclient.pdb"
-				SubSystem="1"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
+				SubSystem="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -98,11 +90,11 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			OutputDirectory="$(SolutionDir)/$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			CharacterSet="1"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -121,12 +113,13 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories=".;..;argp-standalone-1.3"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;SUPPORT_INCLUDE"
+				Optimization="2"
+				EnableIntrinsicFunctions="true"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;ARGP_EXPORTS;HAVE_MALLOC_H"
 				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				WarningLevel="4"
-				Detect64BitPortabilityProblems="false"
+				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -140,16 +133,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib argp.lib"
-				OutputFile="$(OutDir)/igclient.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="argp-standalone-1.3"
+				ModuleDefinitionFile="argp.def"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -180,27 +169,55 @@
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\client.c"
+				RelativePath=".\argp-ba.c"
 				>
 			</File>
 			<File
-				RelativePath=".\compat-windows.c"
+				RelativePath=".\argp-eexst.c"
 				>
 			</File>
 			<File
-				RelativePath="..\list.c"
+				RelativePath=".\argp-fmtstream.c"
 				>
 			</File>
 			<File
-				RelativePath=".\pipes.c"
+				RelativePath=".\argp-help.c"
 				>
 			</File>
 			<File
-				RelativePath="..\support.c"
+				RelativePath=".\argp-parse.c"
+				>
+			</File>
+			<File
+				RelativePath=".\argp-pv.c"
+				>
+			</File>
+			<File
+				RelativePath=".\argp-pvh.c"
+				>
+			</File>
+			<File
+				RelativePath=".\mempcpy.c"
+				>
+			</File>
+			<File
+				RelativePath=".\strcasecmp.c"
+				>
+			</File>
+			<File
+				RelativePath=".\strchrnul.c"
+				>
+			</File>
+			<File
+				RelativePath=".\strndup.c"
+				>
+			</File>
+			<File
+				RelativePath=".\vsnprintf.c"
 				>
 			</File>
 		</Filter>
@@ -210,29 +227,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\compat.h"
+				RelativePath=".\argp-fmtstream.h"
 				>
 			</File>
-			<File
-				RelativePath="..\iguanaIR.h"
-				>
-			</File>
-			<File
-				RelativePath="..\list.h"
-				>
-			</File>
-			<File
-				RelativePath=".\popt\popt-fix.h"
-				>
-			</File>
-			<File
-				RelativePath=".\popt\popt.h"
-				>
-			</File>
-			<File
-				RelativePath="..\support.h"
-				>
-			</File>
+		</Filter>
+		<Filter
+			Name="Resource Files"
+			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
 		</Filter>
 	</Files>
 	<Globals>
