--- a/software/usb_ir/win32/igdaemon.vcproj
+++ b/software/usb_ir/win32/igdaemon.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;..;popt"
+				AdditionalIncludeDirectories=".;..;argp-standalone-1.3"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;LIBUSB_NO_THREADS;SUPPORT_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,10 +63,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib libpopt.lib setupapi.lib"
+				AdditionalDependencies="ws2_32.lib argp.lib setupapi.lib"
 				OutputFile="$(OutDir)/igdaemon.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="popt"
+				AdditionalLibraryDirectories="libusb-win32;argp-standalone-1.3"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/igdaemon.pdb"
 				SubSystem="1"
@@ -121,7 +121,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories=".;..;popt"
+				AdditionalIncludeDirectories=".;..;argp-standalone-1.3"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;LIBUSB_NO_THREADS;SUPPORT_EXPORTS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -140,10 +140,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib libpopt.lib setupapi.lib"
+				AdditionalDependencies="ws2_32.lib argp.lib setupapi.lib"
 				OutputFile="$(OutDir)/igdaemon.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="libusb-win32;popt"
+				AdditionalLibraryDirectories="libusb-win32;argp-standalone-1.3"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -212,10 +212,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\popt\popt-fix.c"
-				>
-			</File>
-			<File
 				RelativePath="..\protocol-versions.c"
 				>
 			</File>
@@ -267,10 +263,6 @@
 			</File>
 			<File
 				RelativePath="..\pipes.h"
-				>
-			</File>
-			<File
-				RelativePath=".\popt\popt-fix.h"
 				>
 			</File>
 			<File
