--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -31,10 +31,10 @@ igdaemon: daemon.o \
           list.o protocol-versions.o pipes.o dataPackets.o compat-unix.o \
           support.c $(OSSUPPORT)
 	$(CC) $(EXPORTARGS) $(CPPFLAGS) $(CFLAGS) -DSUPPORT_EXPORTS \
-              $(LDFLAGS) $^ -lpopt -lpthread -ldl $(LIBNAME) -o $@
+              $(LDFLAGS) $^ -lpthread -ldl $(LIBNAME) -o $@
 
 igclient: client.o list.o support.o compat-unix.o
-	$(CC) $(LDFLAGS) $^ -lpopt $(LIBNAME) -o $@
+	$(CC) $(LDFLAGS) $^ $(LIBNAME) -o $@
 
 %.o: %.c Makefile iguanaIR.h
 	$(CC) -c $(CPPFLAGS) $(CFLAGS) $(PICFLAG) $< -o $@
