--- a/software/usb_ir/win32/usb_ir.vcproj
+++ b/software/usb_ir/win32/usb_ir.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..;libusb-win32;popt"
+				AdditionalIncludeDirectories="..;libusb-win32"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;IGUANAIR_EXPORTS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
