missed a couple include directories last time but caught them on a clean checkout

--- a/software/usb_ir/win32/igdaemon.vcproj
+++ b/software/usb_ir/win32/igdaemon.vcproj
@@ -66,7 +66,7 @@
 				AdditionalDependencies="ws2_32.lib argp.lib setupapi.lib"
 				OutputFile="$(OutDir)/igdaemon.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="libusb-win32;argp-standalone-1.3"
+				AdditionalLibraryDirectories="libusb-win32;$(ConfigurationName)"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/igdaemon.pdb"
 				SubSystem="1"
@@ -143,7 +143,7 @@
 				AdditionalDependencies="ws2_32.lib argp.lib setupapi.lib"
 				OutputFile="$(OutDir)/igdaemon.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="libusb-win32;argp-standalone-1.3"
+				AdditionalLibraryDirectories="libusb-win32;$(ConfigurationName)"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
