--- a/software/usb_ir/win32/igclient.vcproj
+++ b/software/usb_ir/win32/igclient.vcproj
@@ -66,7 +66,7 @@
 				AdditionalDependencies="ws2_32.lib argp.lib"
 				OutputFile="$(OutDir)/igclient.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="argp-standalone-1.3"
+				AdditionalLibraryDirectories="$(ConfigurationName)"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/igclient.pdb"
 				SubSystem="1"
@@ -143,7 +143,7 @@
 				AdditionalDependencies="ws2_32.lib argp.lib"
 				OutputFile="$(OutDir)/igclient.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="argp-standalone-1.3"
+				AdditionalLibraryDirectories="$(ConfigurationName)"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
